generator client {
  provider     = "prisma-client"
  output       = "../src/generated/prisma"
  moduleFormat = "cjs"
}

datasource db {
  provider = "postgresql"
}

enum PerfilUsuario {
  CLIENTE
  ADMIN
  ENTREGADOR
}

enum ModalidadeRecebimento {
  ENTREGA
  RETIRADA
}

enum StatusPedido {
  PENDENTE_PAGAMENTO
  PAGO
  EM_PREPARO
  SAIU_PARA_ENTREGA
  ENTREGUE
  PRONTO_PARA_RETIRADA
  RETIRADO
  EXPIRADO
  CANCELADO
}

enum FormaPagamento {
  PIX
  CARTAO
}

enum ResultadoPagamento {
  APROVADO
  RECUSADO
}

enum EstadoReserva {
  ATIVA
  CONVERTIDA_EM_VENDA
  EXPIRADA_LIBERADA
  DEVOLVIDA_POR_CANCELAMENTO
}

enum ResultadoNotificacao {
  SUCESSO
  FALHA
}

model Usuario {
  id                 String                  @id @default(uuid()) @db.Uuid
  nome               String
  email              String                  @unique
  telefone           String
  credencialSenha    String
  perfil             PerfilUsuario
  tentativasLoginInvalidas Int               @default(0)
  bloqueadoAte       DateTime?                @db.Timestamptz(3)
  enderecos          Endereco[]
  carrinho           Carrinho?
  pedidos            Pedido[]                @relation("ClientePedidos")
  entregas           Pedido[]                @relation("EntregadorPedidos")
  historicosStatus   HistoricoStatusPedido[]
}

model Categoria {
  id        String    @id @default(uuid()) @db.Uuid
  nome      String
  descricao String?
  produtos  Produto[]
}

model Produto {
  id                   String                  @id @default(uuid()) @db.Uuid
  categoriaId          String                  @db.Uuid
  nome                 String
  descricao            String?
  precoAtual           Decimal                 @db.Decimal(12, 2)
  imagem               String?
  ativo                Boolean                 @default(true)
  categoria            Categoria               @relation(fields: [categoriaId], references: [id], onDelete: Restrict)
  personalizacoes      ProdutoPersonalizacao[]
  itensCarrinho        ItemCarrinho[]
  itensPedido          ItemPedido[]
  estoque              Estoque?
  reservasEstoque      ReservaEstoque[]
  movimentacoesEstoque MovimentacaoEstoque[]

  @@index([categoriaId])
}

model Personalizacao {
  id              String                       @id @default(uuid()) @db.Uuid
  nome            String
  descricao       String?
  disponibilidade Boolean                      @default(true)
  ajusteValor     Decimal?                     @db.Decimal(12, 2)
  produtos        ProdutoPersonalizacao[]
  itensCarrinho   ItemCarrinhoPersonalizacao[]
}

model ProdutoPersonalizacao {
  produtoId        String         @db.Uuid
  personalizacaoId String         @db.Uuid
  produto          Produto        @relation(fields: [produtoId], references: [id], onDelete: Restrict)
  personalizacao   Personalizacao @relation(fields: [personalizacaoId], references: [id], onDelete: Restrict)

  @@id([produtoId, personalizacaoId])
  @@index([personalizacaoId])
}

model Carrinho {
  id        String         @id @default(uuid()) @db.Uuid
  usuarioId String         @unique @db.Uuid
  usuario   Usuario        @relation(fields: [usuarioId], references: [id], onDelete: Restrict)
  itens     ItemCarrinho[]
}

model ItemCarrinho {
  id              String                       @id @default(uuid()) @db.Uuid
  carrinhoId      String                       @db.Uuid
  produtoId       String                       @db.Uuid
  quantidade      Int
  carrinho        Carrinho                     @relation(fields: [carrinhoId], references: [id], onDelete: Cascade)
  produto         Produto                      @relation(fields: [produtoId], references: [id], onDelete: Restrict)
  personalizacoes ItemCarrinhoPersonalizacao[]

  @@index([carrinhoId])
  @@index([produtoId])
}

model ItemCarrinhoPersonalizacao {
  itemCarrinhoId   String         @db.Uuid
  personalizacaoId String         @db.Uuid
  itemCarrinho     ItemCarrinho   @relation(fields: [itemCarrinhoId], references: [id], onDelete: Cascade)
  personalizacao   Personalizacao @relation(fields: [personalizacaoId], references: [id], onDelete: Restrict)

  @@id([itemCarrinhoId, personalizacaoId])
  @@index([personalizacaoId])
}

model Endereco {
  id          String  @id @default(uuid()) @db.Uuid
  usuarioId   String  @db.Uuid
  rua         String
  numero      String
  bairro      String
  cidade      String
  cep         String
  complemento String?
  referencia  String?
  usuario     Usuario @relation(fields: [usuarioId], references: [id], onDelete: Restrict)

  @@index([usuarioId])
}

model ConfiguracaoLojaEntrega {
  id                    String  @id @default(uuid()) @db.Uuid
  latitudeLoja          Decimal @db.Decimal(9, 6)
  longitudeLoja         Decimal @db.Decimal(9, 6)
  raioMaximoAtendimento Decimal @db.Decimal(10, 3)
  taxaBase              Decimal @db.Decimal(12, 2)
  valorPorQuilometro    Decimal @db.Decimal(12, 2)
}

model Pedido {
  id                      String                   @id @default(uuid()) @db.Uuid
  identificadorNegocio    String                   @unique
  clienteUsuarioId        String                   @db.Uuid
  entregadorUsuarioId     String?                  @db.Uuid
  data                    DateTime                 @default(now()) @db.Timestamptz(3)
  modalidade              ModalidadeRecebimento
  statusAtual             StatusPedido             @default(PENDENTE_PAGAMENTO)
  valorItens              Decimal                  @db.Decimal(12, 2)
  freteAplicado           Decimal                  @db.Decimal(12, 2)
  total                   Decimal                  @db.Decimal(12, 2)
  confirmacaoPagamento    DateTime?                @db.Timestamptz(3)
  cliente                 Usuario                  @relation("ClientePedidos", fields: [clienteUsuarioId], references: [id], onDelete: Restrict)
  entregador              Usuario?                 @relation("EntregadorPedidos", fields: [entregadorUsuarioId], references: [id], onDelete: Restrict)
  enderecoEntregaSnapshot EnderecoEntregaSnapshot?
  itens                   ItemPedido[]
  pagamentos              Pagamento[]
  historicosStatus        HistoricoStatusPedido[]
  notificacoes            Notificacao[]
  reservasEstoque         ReservaEstoque[]
  movimentacoesEstoque    MovimentacaoEstoque[]

  @@index([clienteUsuarioId, data])
  @@index([entregadorUsuarioId])
  @@index([statusAtual, data])
}

model EnderecoEntregaSnapshot {
  id          String  @id @default(uuid()) @db.Uuid
  pedidoId    String  @unique @db.Uuid
  rua         String
  numero      String
  bairro      String
  cidade      String
  cep         String
  complemento String?
  referencia  String?
  pedido      Pedido  @relation(fields: [pedidoId], references: [id], onDelete: Restrict)
}

model ItemPedido {
  id               String                             @id @default(uuid()) @db.Uuid
  pedidoId         String                             @db.Uuid
  produtoId        String                             @db.Uuid
  quantidade       Int
  precoAplicado    Decimal                            @db.Decimal(12, 2)
  subtotalAplicado Decimal                            @db.Decimal(12, 2)
  pedido           Pedido                             @relation(fields: [pedidoId], references: [id], onDelete: Restrict)
  produto          Produto                            @relation(fields: [produtoId], references: [id], onDelete: Restrict)
  personalizacoes  ItemPedidoPersonalizacaoSnapshot[]

  @@index([pedidoId])
  @@index([produtoId])
}

model ItemPedidoPersonalizacaoSnapshot {
  id                                  String     @id @default(uuid()) @db.Uuid
  itemPedidoId                        String     @db.Uuid
  identificacaoPersonalizacaoAplicada String     @db.Uuid
  nomeAplicado                        String
  ajusteValorAplicado                 Decimal?   @db.Decimal(12, 2)
  itemPedido                          ItemPedido @relation(fields: [itemPedidoId], references: [id], onDelete: Restrict)

  @@index([itemPedidoId])
}

model Pagamento {
  id             String             @id @default(uuid()) @db.Uuid
  pedidoId       String             @db.Uuid
  forma          FormaPagamento
  resultado      ResultadoPagamento
  dataTransacao  DateTime           @db.Timestamptz(3)
  valorAplicavel Decimal            @db.Decimal(12, 2)
  pedido         Pedido             @relation(fields: [pedidoId], references: [id], onDelete: Restrict)

  @@index([pedidoId, dataTransacao])
}

model HistoricoStatusPedido {
  id                   String       @id @default(uuid()) @db.Uuid
  pedidoId             String       @db.Uuid
  statusRegistrado     StatusPedido
  dataHora             DateTime     @db.Timestamptz(3)
  responsavelUsuarioId String?      @db.Uuid
  pedido               Pedido       @relation(fields: [pedidoId], references: [id], onDelete: Restrict)
  responsavel          Usuario?     @relation(fields: [responsavelUsuarioId], references: [id], onDelete: Restrict)

  @@index([pedidoId, dataHora])
  @@index([responsavelUsuarioId])
}

model Notificacao {
  id                     String               @id @default(uuid()) @db.Uuid
  pedidoId               String               @db.Uuid
  eventoStatusOriginador StatusPedido
  destino                String
  canal                  String
  resultado              ResultadoNotificacao
  dataHora               DateTime             @db.Timestamptz(3)
  pedido                 Pedido               @relation(fields: [pedidoId], references: [id], onDelete: Restrict)

  @@index([pedidoId, dataHora])
}

model Estoque {
  produtoId           String  @id @db.Uuid
  quantidadeFisica    Int     @default(0)
  quantidadeReservada Int     @default(0)
  produto             Produto @relation(fields: [produtoId], references: [id], onDelete: Restrict)
}

model ReservaEstoque {
  id                       String        @id @default(uuid()) @db.Uuid
  pedidoId                 String        @db.Uuid
  produtoId                String        @db.Uuid
  quantidade               Int
  estado                   EstadoReserva
  momentoExpiracaoValidade DateTime      @db.Timestamptz(3)
  pedido                   Pedido        @relation(fields: [pedidoId], references: [id], onDelete: Restrict)
  produto                  Produto       @relation(fields: [produtoId], references: [id], onDelete: Restrict)

  @@index([pedidoId])
  @@index([produtoId, estado, momentoExpiracaoValidade])
}

model MovimentacaoEstoque {
  id           String   @id @default(uuid()) @db.Uuid
  produtoId    String   @db.Uuid
  pedidoId     String?  @db.Uuid
  quantidade   Int
  motivoOrigem String
  data         DateTime @db.Timestamptz(3)
  produto      Produto  @relation(fields: [produtoId], references: [id], onDelete: Restrict)
  pedido       Pedido?  @relation(fields: [pedidoId], references: [id], onDelete: Restrict)

  @@index([produtoId, data])
  @@index([pedidoId])
}
